[package]
name = "topset"
version = "0.2.0"
authors = ["Xophe <christophe.dousson@orange.com>"]
edition = "2021"
license = "MIT"
description = "Top N selector"
repository = "https://github.com/XopheD/topset"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
